A little descriptive sub-title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <body>
+<header>
 <h1>Vacation Expenses</h1>
+Find out who should pay what at the end of a common vacation.
+</header>
 </body>
 </html>
