--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<html>
+<!doctype html>
+<html lang="en" ng-app>
+<head>
+	<meta charset="utf-8">
+	<title>Vacation Expenses</title>
+	<script src="lib/angular/angular.js"></script>
+</head>
 <body>
 <header>
 <h1>Vacation Expenses</h1>
