--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Vacation Expenses</title>
 	<script src="lib/angular/angular.js"></script>
 	<script src="js/expensesCtrl.js"></script>
+	<script src="js/finance.js"></script>
 </head>
 <body ng-controller="ExpensesCtrl">
 
