--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Find out who should pay what at the end of a common vacation.
 <h2>Who paid what?</h2>
 <ul>
 	<li ng-repeat="expense in expenses"><div>
-		<input type="text" ng-model="expense.person">
+		<input type="text" ng-model="expense.name">
 		<input type="text" ng-model="expense.amount">
 		<input type="text" ng-model="expense.purpose">
 	</div>
