Hide share input boxes if equalShares is ticked.

--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@ Find out who should pay what at the end of a common vacation.
 		<input type="text" ng-model="expense.name">
 		<input type="text" ng-model="expense.amount">
 		<input type="text" ng-model="expense.purpose">
+		<input type="checkbox" ng-model="expense.sharingModel.equalShares">Equal shares</input>
 	</div>
-	<div>
-		<div><input type="checkbox" ng-model="expense.sharingModel.equalShares">Equal shares</input></div>
-		<div>
-			<ul>
-				<li ng-repeat="(name, share) in expense.sharingModel.shares"><div>
-					<span>{{name}}</span>
-					<input type="text" ng-model="expense.sharingModel.shares[name]">
-				</div>
-			</ul>
-		</div>
+	<div ng-show="!expense.sharingModel.equalShares">
+		<ul>
+			<li ng-repeat="(name, share) in expense.sharingModel.shares"><div>
+				<span>{{name}}</span>
+				<input type="text" ng-model="expense.sharingModel.shares[name]">
+			</div>
+		</ul>
 	</div>
 </ul>
 
