--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@ Find out who should pay what at the end of a common vacation.
 		</div>
 	</li>
 </ul>
+<form ng-submit="addExpense()">
+	<input type="text" ng-model="newExpense.name">
+	<input type="text" ng-model="newExpense.amount">
+	<input type="text" ng-model="newExpense.purpose">
+	<br><input type="submit" value="Add">
+</form>
 
 <h2>Totals</h2>
 <table>
