--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Find out who should pay what at the end of a common vacation.
 			<input type="text" ng-model="expense.amount">
 			<input type="text" ng-model="expense.purpose">
 			<input type="checkbox" ng-model="expense.sharingModel.equalShares">Equal shares</input>
+			<a ng-click="deleteExpense($index)" href="#">Remove</a>
 		</div>
 		<div ng-show="!expense.sharingModel.equalShares">
 			<ul>
