--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@ Find out who should pay what at the end of a common vacation.
 
 <h2>Totals</h2>
 <table>
-	<tr><th>Person</th><th>Total paid</th><th>Total due</th></tr>
+	<tr><th>Person</th><th>Total paid</th><th>Total due</th><th>Balance</th></tr>
 	<tr ng-repeat="person in people">
 		<td><span>{{person.name}}</span></td>
-		<td><span>{{person.totalPaid}}</span></td>
-		<td><span>{{person.totalDue}}</span></td>
+		<td><span>{{person.totalPaid | currency}}</span></td>
+		<td><span>{{person.totalDue | currency}}</span></td>
+		<td><span>{{person.totalPaid - person.totalDue | currency}}</span></td>
 	</tr>
 </table>
 </body>
