Prepare to use $location (set $locationProvider to HTML5 mode)

--- a/bill.html
+++ b/bill.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="vacationExpensesApp">
 <head>
 	<meta charset="utf-8">
+	<base href="/">
 	<title>Vacation Expenses</title>
 	<script src="lib/angular/angular.js"></script>
 	<script src="js/expensesCtrl.js"></script>
