Remane directory js/ -> client/

--- a/bill.html
+++ b/bill.html
@@ -5,8 +5,8 @@
 	<base href="/">
 	<title>Vacation Expenses</title>
 	<script src="lib/angular/angular.js"></script>
-	<script src="js/expensesCtrl.js"></script>
-	<script src="js/finance.js"></script>
+	<script src="client/expensesCtrl.js"></script>
+	<script src="client/finance.js"></script>
 </head>
 <body ng-controller="ExpensesCtrl">
 
