--- a/client/bill.html
+++ b/client/bill.html
@@ -7,6 +7,7 @@
 	<script src="lib/angular/angular.js"></script>
 	<script src="client/expensesCtrl.js"></script>
 	<script src="client/finance.js"></script>
+	<script src="client/dataStoreService.js"></script>
 </head>
 <body ng-controller="ExpensesCtrl">
 
