--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="vacationExpensesApp">
+<html lang="en" ng-app="vacationExpenses.app">
 <head>
 	<meta charset="utf-8">
 	<base href="/">
@@ -9,7 +9,7 @@
 	<script src="client/finance.js"></script>
 	<script src="client/dataStoreService.js"></script>
 </head>
-<body ng-controller="ExpensesCtrl">
+<body ng-controller="billController">
 
 <h1>Vacation Expenses</h1>
 Find out who should pay what at the end of a common vacation.
