--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -5,6 +5,7 @@
 	<base href="/">
 	<title>Vacation Expenses</title>
 	<script src="lib/angular/angular.js"></script>
+	<script src="client/app.js"></script>
 	<script src="client/billController.js"></script>
 	<script src="client/finance.js"></script>
 	<script src="client/dataStoreService.js"></script>
