Introduce billService, encapsulates finance.recalculateResult

--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -6,6 +6,7 @@
 	<title>Vacation Expenses</title>
 	<script src="lib/angular/angular.js"></script>
 	<script src="client/app.js"></script>
+	<script src="client/billService.js"></script>
 	<script src="client/billController.js"></script>
 	<script src="client/finance.js"></script>
 	<script src="client/dataStoreService.js"></script>
