--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -45,6 +45,8 @@ Loading bill...
 			<form ng-submit="addExpense()">
 				<input type="text" ng-model="newExpense.name">
 				<input type="text" ng-model="newExpense.amount">
+				<select ng-options="cur.code as (cur.code + ' ') for cur in bill.currencies"
+					    ng-model="newExpense.currency"></select>
 				<input type="text" ng-model="newExpense.purpose">
 				<input type="submit" value="Add">
 			</form>
