Move calculateResult()[*].totalPaid into billObject.calculatePaid(name, currency)
calculateResult() is now obsolete and has been deleted.

--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -56,11 +56,11 @@ Loading bill...
 	<h2>Totals</h2>
 	<table>
 		<tr><th>Person</th><th>Total paid</th><th>Total due</th><th>Balance</th></tr>
-		<tr ng-repeat="person in result">
-			<td><span>{{person.name}}</span></td>
-			<td><span>{{person.totalPaid | currency}}</span></td>
-			<td><span>{{bill.calculateDue(person.name, 'USD') | currency}}</span></td>
-			<td><span>{{person.totalPaid - person.totalDue | currency}}</span></td>
+		<tr ng-repeat="name in bill.names" ng-controller="resultController">
+			<td><span>{{name}}</span></td>
+			<td><span>{{totalPaid | currency}}</span></td>
+			<td><span>{{totalDue | currency}}</span></td>
+			<td><span>{{totalPaid - totalDue | currency}}</span></td>
 		</tr>
 	</table>
 </div>
