--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -76,9 +76,13 @@ Loading bill...
 	</div>
 
 	<h2>Exchange rates</h2>
+	Reference currency:
+	<select ng-options="code as code for (code, cur) in bill.currencies"
+			ng-model="bill.referenceCurrency"></select>
+
 	<ul>
 		<li ng-repeat="(code, cur) in bill.currencies">
-			<span>1 {{code}} = {{cur.inEUR}} EUR</span>
+			<span>1 {{code}} = {{cur.inEUR / bill.currencies[bill.referenceCurrency].inEUR}} {{bill.referenceCurrency}}</span>
 		</li>
 	</ul>
 </div>
