Add jquery 1.11.2 (minified)

--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -114,5 +114,7 @@ Loading bill...
 		<h1>Error {{error.status}}</h1>
 	</div>
 </div>
+
+<script src="lib/jquery-1.11.2.min.js"></script>
 </body>
 </html>
