--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,6 @@
 <h1>Vacation Expenses</h1>
 Find out who should pay what at the end of a common vacation.
 
+<script src="lib/jquery-1.11.2.min.js"></script>
 </body>
 </html>
