--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -24,7 +24,7 @@ Loading bill...
 <div ng-show="billLoaded">
 	<h2>Who paid what?</h2>
 	<ul>
-		<li ng-repeat="expense in bill.expenses track by $index" ng-controller="expenseController">
+		<li ng-repeat="expense in bill.expenses" ng-controller="expenseController">
 			<div>
 				<input type="text" ng-model="expense.name">
 				<input type="text" ng-model="expense.amount">
