Don't show bullets for expenses list.

--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -19,6 +19,7 @@
 	<script src="client/dataStoreService.js"></script>
 
 	<link href="lib/bootstrap-3.3.4-dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="client/bill.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,7 +38,7 @@ Loading bill...
 </div>
 <div ng-show="billLoaded">
 	<h2>Who paid what?</h2>
-	<ul>
+	<ul class="expenses-list">
 		<li ng-repeat="expense in bill.expenses" ng-controller="expenseController">
 			<div>
 				<input type="text" ng-model="expense.name">
