--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -100,20 +100,27 @@ Loading bill...
 	</div>
 
 	<h2>Exchange rates</h2>
-	<div ng-controller="exchangeRatesController">
-		Reference currency:
-		<select ng-options="code as code for (code, cur) in bill.currencies"
-				ng-model="bill.referenceCurrency"></select>
-
-		<ul>
-			<li ng-repeat="(code, cur) in bill.currencies" ng-if="code != bill.referenceCurrency">
-				<span>
-					1 {{bill.referenceCurrency}} =
-					<input type="text" ng-model="displayedExchangeRates[code]">
-					{{code}}
-				</span>
-			</li>
-		</ul>
+	<div class="row" ng-controller="exchangeRatesController">
+		<div class="col-md-6">
+				<table class="table table-striped exchange-rates">
+					<thead>
+						<tr>
+							<th><label>Reference:</label></th>
+							<th><select
+								ng-options="code as code for (code, cur) in bill.currencies"
+								ng-model="bill.referenceCurrency"></select>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="(code, cur) in bill.currencies" ng-if="code != bill.referenceCurrency">
+							<td>{{code}}</td>
+							<td><input type="text" ng-model="displayedExchangeRates[code]"></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 
 		<form ng-submit="addCurrency()">
 			<div ng-show="!isFetchingExchangeRate">
