--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -103,15 +103,15 @@ Loading bill...
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="result in results">
-						<td><span>{{result.name}}</span></td>
+					<tr ng-repeat="name in bill.names">
+						<td><span>{{name}}</span></td>
 						<td><select
 							ng-options="code as code for (code, cur) in bill.currencies"
-							ng-model="preferredCurrency[result.name]"></select></td>
-						<td><span>{{result.totalPaid | ve_currency : preferredCurrency[result.name]}}</span></td>
-						<td><span>{{result.totalDue  | ve_currency : preferredCurrency[result.name]}}</span></td>
-						<td><span ng-if="result.balance <= 0">{{-result.balance   | ve_currency : preferredCurrency[result.name]}}</span></td>
-						<td><span ng-if="result.balance > 0">{{result.balance   | ve_currency : preferredCurrency[result.name]}}</span></td>
+							ng-model="preferredCurrency[name]"></select></td>
+						<td><span>{{results[name].totalPaid | ve_currency : preferredCurrency[name]}}</span></td>
+						<td><span>{{results[name].totalDue  | ve_currency : preferredCurrency[name]}}</span></td>
+						<td><span ng-if="results[name].balance <= 0">{{-results[name].balance   | ve_currency : preferredCurrency[name]}}</span></td>
+						<td><span ng-if="results[name].balance > 0">{{results[name].balance   | ve_currency : preferredCurrency[name]}}</span></td>
 					</tr>
 				</tbody>
 			</table>
