--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -42,6 +42,7 @@ Loading bill...
 	<div>
 		<div ng-repeat="expense in bill.expenses"
 			 ng-controller="expenseController"
+			 ng-init="expense = expense"
 			 class="row">
 			<div class="col-lg-12 expense">
 				<div class="td-name">
@@ -65,7 +66,8 @@ Loading bill...
 					<ul>
 						<li ng-repeat="name in bill.names"
 							class="participant"
-							ng-class="participantStatus[name]">
+							ng-class="createNgClassObject(name)"
+							ng-click="toggleParticipantIfEqualShares(name)">
 							<div class="participant-icon glyphicon glyphicon-user"
 								 ng-show="participantStatus[name] != 'participant-number'"></div>
 							<input type="text"
