Rename everything "app" to "billApp"
We are about to introduce a new app for the homepage, and we need
to name the apps better than just 'app'.

--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="vacationExpenses.app">
+<html lang="en" ng-app="vacationExpenses.billApp">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 	<title>Vacation Expenses</title>
 
 	<script src="lib/angular/angular.js"></script>
-	<script src="client/app.js"></script>
+	<script src="client/billApp.js"></script>
 	<script src="client/billService.js"></script>
 	<script src="client/billController.js"></script>
 	<script src="client/expenseController.js"></script>
