--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 	<script src="lib/angular/angular.js"></script>
 	<script src="client/homepageApp.js"></script>
 	<script src="client/homepageController.js"></script>
+	<script src="client/billService.js"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
