Disable the 'Create bill' button while the POST request is running

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@ Find out who should pay what at the end of a common vacation.
 		<input
 			type="submit"
 			class="btn btn-primary btn-lg"
+			ng-disabled="createBillButtonDisabled"
 			id="createBillButton"
 			value="Get started">
 	</form>
