Set up link to Google Form for feedback

--- a/client/billTemplate.html
+++ b/client/billTemplate.html
@@ -30,6 +30,10 @@
 </head>
 <body ng-controller="billController" class="container">
 
+<div class="alert alert-warning">
+Help improve 'Vacation Expenses' - <a href="https://docs.google.com/forms/d/14KIkxUScW-SouBKK_yeP2Tt8h3N9wq9JGj7FTVdGDtQ/viewform?usp=send_form" target="_blank">Give me feedback by answering a few simple questions (Google Form)</a>'
+</div>
+
 <h1>Vacation Expenses</h1>
 Find out who should pay what at the end of a common vacation.
 
